@@ -366,6 +366,24 @@ class Similar:
                 for index, line in enumerate(readlines()):
                     if self.linter._is_one_message_enabled("R0801", index + 1):  # type: ignore[attr-defined]
                         active_lines.append(line)
+                    elif active_lines:
+                        # Insert " ..." into the previous line if it looks like a class/function/if/for/while
+                        # This is so that astroid can parse it without a body
+                        without_comments_or_whitespace = (
+                            active_lines[-1].split("#", maxsplit=1)[0].strip().rstrip()
+                        )
+                        if without_comments_or_whitespace.endswith(":"):
+                            last_line = active_lines.pop()
+                            without_leading_whitespace = last_line.strip()
+                            index_after_colon = last_line.index(
+                                without_leading_whitespace
+                            ) + len(without_comments_or_whitespace)
+                            substitute = (
+                                last_line[:index_after_colon]
+                                + " ..."
+                                + last_line[index_after_colon:]
+                            )
+                            active_lines.append(substitute)
             else:
                 active_lines = readlines()
 
